Fixed header alignments

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -744,7 +744,7 @@ div[datepicker] {
     height: 34px;
 }
 
-.infobox-all-accounts-header {
+.infobox-header-wo-subtitle {
 	height: 34px;
     line-height: 34px;
 }
@@ -753,6 +753,7 @@ div[datepicker] {
     color: @infobox-black;
     font-size: 18px;
     font-weight: 600;
+    line-height: 24px;
 }
 
 .infobox-icon {
